--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="list-inline item-details">
-                                        <li>Client:
+                                        <li>Name:
                                             <strong>
                                                 <a href="#">Jacqueline Casey Inspired Poster</a>
                                             </strong>
@@ -578,7 +578,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="list-inline item-details">
-                                        <li>Client:
+                                        <li>Name:
                                             <strong>
                                                 <a href="#">Melting Icebergs</a>
                                             </strong>
@@ -683,7 +683,7 @@
                                     </li>
                                 </ul>
                                   <p>neopets for mobile was a short, high-fidelity prototype done for an app design project
-                                  in my Foundations of Human Centered Computing class. </br> </br>To begin the project I started with
+                                  originally for class, and then later modified for fun. </br> </br>To begin the project I started with
                                   some concept sketches of how I would overcome the peculiar design challenges that neopets on mobile
                                   would have. Navigation was the first big challenge I attempted to conquer. In the actual website, noepets,
                                   uses dropdown menus for advanced navigation through the site. To solve this I combined the use of a traditional
