--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <p class="mb-5" style="max-width: 500px; color: white;" >I am an aspiring UX/UI designer and researcher currently seeking a Summer 2019 co-op to further expand my craft.
               I am studying Human Centered Computing at Rochester Institute of Technology, which combines psychology, technology, and design principles to enhance users' experiences.
-                  Below you'll find select samples of my work across all categories. </p> <!--To see more, visit my <a href="https://github.com/blackroses9995">Github.</a>-->
+                  Below you'll find select samples of my work across multiple categories. </p> <!--To see more, visit my <a href="https://github.com/blackroses9995">Github.</a>-->
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
                       <a href="https://www.facebook.com/mary.gentile.520">
@@ -278,7 +278,7 @@
               <div class="col-md-3 col-sm-6">
                   <div class="skill-item">
                       <i class="fa fa-magic fa-5x"></i>
-                      <h2><span class="counter"> 85 </span><span>%</span></h2>
+                      <h2><span class="counter"> 75 </span><span>%</span></h2>
                       <p>Adobe Xd</p>
                   </div>
               </div>
