added iago to portfolio

--- a/index.html
+++ b/index.html
@@ -234,16 +234,16 @@
                       <img class="img-fluid" src="img/portfolio/lava/lava1.png" alt="">
                   </a>
               </div>
-              <!--<div class="col-sm-4 portfolio-item filter coding">-->
-                  <!--<a class="portfolio-link" href="#portfolioModal9" data-toggle="modal">-->
-                      <!--<div class="caption-port">-->
-                          <!--<div class="caption-port-content">-->
-                              <!--<i class="fa fa-search-plus fa-3x"></i>-->
-                          <!--</div>-->
-                      <!--</div>-->
-                      <!--<img class="img-fluid" src="img/portfolio/hammer/hammer-drawn.jpg" alt="">-->
-                  <!--</a>-->
-              <!--</div>-->
+              <div class="col-sm-4 portfolio-item filter app">
+                  <a class="portfolio-link" href="#portfolioModal9" data-toggle="modal">
+                      <div class="caption-port">
+                          <div class="caption-port-content">
+                              <i class="fa fa-search-plus fa-3x"></i>
+                          </div>
+                      </div>
+                      <img class="img-fluid" src="img/portfolio/iago/iago-cover1.png" alt="">
+                  </a>
+              </div>
 
               <!--end of portfolio modules-->
           </div>
@@ -862,7 +862,7 @@
                                           <a href="#">April 2018</a>
                                         </strong>
                                     </li>
-                                    <li>Service:
+                                    <li>Category:
                                         <strong>
                                           <a href="#">Coding Project +</a>
                                         </strong>
@@ -883,57 +883,90 @@
             </div>
         </div>
     </div>
-    <!--<div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">-->
-        <!--<div class="modal-dialog" role="document">-->
-            <!--<div class="modal-content">-->
-                <!--<div class="close-modal" data-dismiss="modal">-->
-                    <!--<div class="lr">-->
-                        <!--<div class="rl"></div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="container">-->
-                <!--<div class="row">-->
-                        <!--<div class="modal-body">-->
-                            <!--<div class="title-bar">-->
-                              <!--<div class="col-md-12">-->
-                                <!--<h2 class="text-center">Our Project</h2>-->
-                                <!--<div class="heading-border"></div>-->
-                              <!--</div>-->
-                            <!--</div>-->
-                            <!--<div class="row">-->
-                              <!--<div class="col-md-6">-->
-                                <!--<img class="img-fluid img-centered" src="img/portfolio/hammer/hammer-drawn.jpg" alt="">-->
-                              <!--</div>-->
-                              <!--<div class="col-md-6">-->
-                                <!--<p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>-->
-                                <!--<ul class="list-inline item-details">-->
-                                    <!--<li>Client:-->
-                                        <!--<strong>-->
-                                          <!--<a href="#">Techs Soft</a>-->
-                                        <!--</strong>-->
-                                    <!--</li>-->
-                                    <!--<li>Date:-->
-                                        <!--<strong>-->
-                                          <!--<a href="#">April 2018</a>-->
-                                        <!--</strong>-->
-                                    <!--</li>-->
-                                    <!--<li>Service:-->
-                                        <!--<strong>-->
-                                          <!--<a href="#">Web Development</a>-->
-                                        <!--</strong>-->
-                                    <!--</li>-->
-                                <!--</ul>-->
-                                <!--<button class="btn btn-general btn-white" type="button" data-dismiss="modal">-->
-                                    <!--<i class="fa fa-times"></i> Close-->
-                                <!--</button>-->
-                            <!--</div>-->
-                          <!--</div>-->
-                        <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl"></div>
+                    </div>
+                </div>
+                <div class="container">
+                <div class="row">
+                        <div class="modal-body">
+                            <div class="title-bar">
+                              <div class="col-md-12">
+                                <h2 class="text-center">iago</h2>
+                                <div class="heading-border"></div>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-md-6">
+                                <img class="img-fluid img-centered" src="img/portfolio/iago/iago-cover.png" alt="">
+                              </div>
+                              <div class="col-md-6">
+                                <ul class="list-inline item-details">
+                                    <li>Name:
+                                        <strong>
+                                          <a href="#">iago</a>
+                                        </strong>
+                                    </li>
+                                    <li>Date:
+                                        <strong>
+                                          <a href="#">March 2019</a>
+                                        </strong>
+                                    </li>
+                                    <li>Category:
+                                        <strong>
+                                          <a href="#">App Design</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                                  <p><strong>iago is an ongoing project that I am currently working on. I am currently developing the high fidelity prototype of iago and will publish the results when available.</strong></p>
+                                  <p>The whole basis of iago is creating your dream vacation for your budget, all with an easy to use app. iago is a multi-step
+                                  app that will include 5 major steps in it's creation:
+                                  <ol>
+                                  <li>Developing the project website and basic design sketches.</li>
+                                  <li>Development of the Lo-Fi prototype.</li>
+                                  <li>Evaluation of the Lo-Fi prototye.</li>
+                                  <li>Development of the Hi-Fi prototype.</li>
+                                  <li>Evaluation of the Hi-Fi prototype and applying any tweaks.</li>
+                              </ol></p>
+
+                                  <p>You can view the developmental website of iago by clicking <a href="https://people.rit.edu/mng7722/iago/" target="_blank">here.</a>
+                                  A complete evaluation of the problem as well as explanations of what to prototype are explained. Additionally, you can view my "archives",
+                                  which is essentially my hand written notes and logic for iago, by clicking <a href="https://drive.google.com/open?id=1k6npExD6C8zYD74g0ystpweyrtlqypj9" target="_blank">here.</a>
+                                  </p>
+                            </div>
+                                <div class="col-md-6">
+                                    <img class="img-fluid img-centered" src="img/portfolio/iago/iago-lofi-examples.png" alt="">
+                                </div>
+                                <div class="col-md-6">
+                                    <p>This, and the above photo, are examples of what the low fidelity prototype of iago looks like. You can
+                                    view all of the screens of iago by clicking <a href="https://drive.google.com/open?id=1iGHnS0vnMAhBSA5eqkuHOpc0ouZR81SS" target="_blank">here.</a>
+                                    </p>
+                                    <p>Additionally, you can use the InVision prototype and walk through iago's base structure by clicking <a href="https://invis.io/EKQSOW6WTFD" target="_blank">here.</a> </p>
+                                <p>Here's a quick snapshot of iago's lo-fi features:
+                                <ul>
+                                    <li>simple bottom 3-tab navigation</li>
+                                        <ul><li>with an expanded top 2-tab navigation under the "trips" section.</li></ul>
+                                    <li>a system that allows for the creation of "trip profiles" that can be reused in trip planning, cutting down time</li>
+                                    <li>a step-by-step planning wizard that walks users through planning their perfect trip</li>
+                                    <li>a uniquely generated list of trips that match your preferences at the end of the wizard</li>
+                                    <li>the ability to see why trips are a good fit or not for your vacation</li>
+                                    <li>the ability to save trips and edit them later on</li>
+                                </ul></p>
+                                </div>
+                            <button class="btn btn-general btn-white" type="button" data-dismiss="modal">
+                              <i class="fa fa-times"></i> Close
+                              </button>
+                          </div>
+                        </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div> <!--end of iago module-->
 
 
     <!-- Global javascript -->
