added support to make links open in new tabs

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   Below you'll find select samples of my work across multiple categories. </p> <!--To see more, visit my <a href="https://github.com/blackroses9995">Github.</a>-->
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
-                      <a href="https://www.facebook.com/mary.gentile.520">
+                      <a href="https://www.facebook.com/mary.gentile.520" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
                 </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="https://twitter.com/black_roses9995">
+                      <a href="https://twitter.com/black_roses9995" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -101,7 +101,7 @@
                 </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="https://www.linkedin.com/in/mary-gentile-648049139/">
+                      <a href="https://www.linkedin.com/in/mary-gentile-648049139/" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -109,7 +109,7 @@
                 </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="https://github.com/blackroses9995">
+                      <a href="https://github.com/blackroses9995" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -422,11 +422,11 @@
                 <address class="address-details-f">
                     <a href="mailto:mng7722@rit.edu" class="">maryngentile99@gmail.com</a>
                 </address>
-                <ul class="list-inline social-icon-f top-data">
+<!--                 <ul class="list-inline social-icon-f top-data">
                   <li><a href="#" target="_empty"><i class="fa top-social fa-facebook" style="color: #4267b2; border-color:#4267b2;"></i></a></li>
                   <li><a href="#" target="_empty"><i class="fa top-social fa-twitter" style="color: #4AB3F4; border-color:#4AB3F4;"></i></a></li>
                   <li><a href="#" target="_empty"><i class="fa top-social fa-google-plus" style="color: #e24343; border-color:#e24343;"></i></a></li> 
-                </ul>
+                </ul> -->
                 </div>
               </div>
             </div> 
@@ -871,7 +871,7 @@
                                   <p>L.A.V.A. or LED Audio Visualizer with Acrylic was a project of many firsts for me. I learned
                                       the basics of using micro-controllers (in this case an Arduino), coding in C++, how to use a CNC
                                       mill to laser engrave a picture onto an Acrylic sheet, and even the basics of wood working. You
-                                      can find the full write up (and code) for L.A.V.A. on my Github <a href="https://github.com/blackroses9995/LAVA">by clicking here.</a></p>
+                                      can find the full write up (and code) for L.A.V.A. on my Github <a href="https://github.com/blackroses9995/LAVA" target="_blank">by clicking here.</a></p>
                               </div>
                                 <button class="btn btn-general btn-white" type="button" data-dismiss="modal">
                                     <i class="fa fa-times"></i> Close
