coop dates updated

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </h1>
             <div class="subheading mb-5" style="color: white; font-size: 25px;">Human Centered Computing
             </div>
-            <p class="mb-5" style="max-width: 500px; color: white;" >I am an aspiring UX/UI designer and researcher currently seeking a Summer 2019 co-op to further expand my craft.
+            <p class="mb-5" style="max-width: 500px; color: white;" >I am an aspiring UX/UI designer and researcher currently seeking a Summer and or Fall 2020 co-op to further expand my craft.
                 I am studying Human Centered Computing at Rochester Institute of Technology, which combines psychology, technology, and design principles to enhance users' experiences.
                 Below you'll find select samples of my work across multiple categories. </p> <!--To see more, visit my <a href="https://github.com/blackroses9995">Github.</a>-->
             <ul class="list-inline list-social-icons mb-0">
