--- a/index.html
+++ b/index.html
@@ -397,7 +397,17 @@
                         </p>
                     </div>
                 </div>
-
+                <div class="award">
+                    <div class="award-icon"></div>
+                    <div class="award-content">
+                        <span class="date">May 2021</span>
+                        <h5 class="title">Graduated from RIT</h5>
+                        <p class="description">
+                            After four years of studying and work, I graduated from the Rochester Institute of Technology with a BS in Human Centered Computing and a 3.84 GPA. While there I studied design, psychology, and technology principles to help advance my understanding of UX/UI design and research as well as development. I completed two 'concentrations' or minors within my degree programme in Design and Psychology as well as earned two minors, one in Advertising & Public Relations and the other in Creative Writing. 
+                        </p>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
